Add Deepseek-Coder-1.3B model via Git LFS
- Enable Git LFS for *.gguf files
- Include 833MB model in repository
- Update .gitignore to allow models/ directory
- Model: deepseek-coder-1.3b-instruct.Q4_K_M.gguf

--- a/.gitignore
+++ b/.gitignore
@@ -40,9 +40,11 @@ server.log
 *.temp
 *.bak
 
-# Model files (too large for git)
-models/
-*.gguf
+# Model files (tracked via Git LFS)
+# models/ directory is now tracked
+# *.gguf files use Git LFS
+
+# Other large model files (not used currently)
 *.bin
 *.pt
 *.pth
